--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900');
+
+*, ::before, ::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  /* colors */
+  --body-bg-color: #FFFFFF;
+  --sidebar-bg-color: #DFE0E2;
+  --text-color: #397367;
+  --title-color: #43484C;
+  --date-color: #5DA399;
+    /* --dark-body-bg-color */
+  --icon-color: var(--text-color);
+  --circle-color: #63CCCA;
+  --circle-color-plain: #42858C;
+    /* fonts */
+  --body-font: "Jost", "Sans-serif";
+  --h1-font-size: 1.7rem;
+  --h2-font-size: 1.3rem;
+  --h3-font-size: 1.1rem;
+  --h4-font-size: 1rem;
+    /* helpers */
+  --spacing-1:.4rem;
+  --spacing-2:.8rem;
+  --spacing-3:1.2rem;
+  --spacing-4:1.5rem;
+  --spacing-5:2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+body {
+  font-family: var(--body-font, "Jost");
+  font-weight: 200;
+  color: var(--text-color);
+  background-color: var(--body-bg-color);
+};
